--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="wrapper">
         <div class="title">手とお寿司</div>
-        <div class="mainPic"><img src="" alt="" width="500" height="400"></div>
+        <div class="mainPic"><img src="手に寿司_NFT_2023.png" alt="" width="500" height="400"></div>
 
         <div class="text_box font_">日本の敬遠されがちな慣習を、アートの力で世界に啓蒙、発信します。口いっぱいにほおばることや、素手で素材を触れ料理をつくること、手渡しや手掴みで食べる「お寿司」をテーマにしました。
         </div>
