--- a/index.html
+++ b/index.html
@@ -7,14 +7,41 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <div class="wrapper">
+<div class="wrapper">
         <div class="title">手とお寿司</div>
         <div class="mainPic"><img src="img/手に寿司_NFT_2023.png" alt="" width="500" height="400"></div>
 
         <div class="text_box font_">日本の敬遠されがちな慣習を、アートの力で世界に啓蒙、発信します。口いっぱいにほおばることや、素手で素材を触れ料理をつくること、手渡しや手掴みで食べる「お寿司」をテーマにしました。
         </div>
+  <div id="navArea">
+    <nav class="navArea-nav">
+      <ul class="gnav">
+          <li class="gnav__item">
+            <a href="#WORKS">WORKS</a></li>
+          <li class="gnav__item"><a href="#活動実績">活動実績</a>
+          </li>
+          <li class="gnav__item">
+            <a href="#ABOUT">ABOUT</a>
+          </li>
+       </ul>
+    </nav>
+
+    <div class="toggle-btn">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
 
+    <div id="mask"></div>
+  </div>
+
+    <main>
+
+    </main>
+</div>
+<footer>
+
+</footer>
+  <script src="./script.js"></script>
 </body>
 </html>
