--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <section id="MEMBER" class="member">
         <div class="title">MEMBER</div>
         <div class="text_box font_">
-          制作メンバー情報をここに記載します。<br>
-          （名前 / 役割 / コメント など）
+          <br>
+          （小山彩葉 / Webサイト制作  など）
         </div>
       </section>
       <!-- ▲▲ MEMBER セクション ▲▲ -->
