--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="title">MEMBER</div>
         <div class="text_box font_">
           <br>
-          （小山彩葉 / Webサイト制作  など）
+          （ 小山　/ Webサイト制作  など）
         </div>
       </section>
       <!-- ▲▲ MEMBER セクション ▲▲ -->
