モバイル仕様

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="splash">
 		<div id="splash_logo">
-			<img src="img/tenisusi.png" alt="画像" class="fadeUp">
+			<img src="img/tenisusi.png" alt="画像" class="fadeup-img">
 		</div>
 	</div>
     <header class="site-header">
@@ -46,7 +46,7 @@
 
     <main>
         <div class="mainPic">
-            <img src="img/susitote.png" width="500">
+            <img src="img/susitote.png" width="500" class="responsive-img">
         </div>
       <!-- ▼▼ ABOUT セクション ▼▼ -->
     <section id="ABOUT" class="about">
